--- a/test-project/0/index.html
+++ b/test-project/0/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -53,7 +53,78 @@
                         });
                     }
                 });
-            }, 30000); // 30 seconds delay
+            }, 2000); // 30 seconds delay
+        });
+    </script>
+</body>
+</html> -->
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="shortcut icon" href="assets/images/logos/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+</head>
+<body>
+    <div class="justify-content-center d-flex my-5">
+        <button class="btn btn-primary" id="clickMe">Click Me</button>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="assets/js/push-notification.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('service-worker.js')
+                    .then(function(registration) {
+                        console.log('Service Worker registered with scope:', registration.scope);
+                        return registration;
+                    })
+                    .catch(function(error) {
+                        console.error('Service Worker registration failed:', error);
+                    });
+            }
+
+            setTimeout(() => {
+                Notification.requestPermission().then(perm => {
+                    if (perm === "granted") {
+                        const notifications = [
+                            { title: "Notification 1", body: "This is the body of notification 1", icon: "assets/images/icon1.png" },
+                            { title: "Notification 2", body: "This is the body of notification 2", icon: "assets/images/icon2.png" },
+                            { title: "Notification 3", body: "This is the body of notification 3", icon: "assets/images/icon3.png" },
+                            { title: "Notification 4", body: "This is the body of notification 4", icon: "assets/images/icon4.png" },
+                            { title: "Notification 5", body: "This is the body of notification 5", icon: "assets/images/icon5.png" },
+                            { title: "Notification 6", body: "This is the body of notification 6", icon: "assets/images/icon6.png" },
+                            { title: "Notification 7", body: "This is the body of notification 7", icon: "assets/images/icon7.png" },
+                            { title: "Notification 8", body: "This is the body of notification 8", icon: "assets/images/icon8.png" },
+                            { title: "Notification 9", body: "This is the body of notification 9", icon: "assets/images/icon9.png" },
+                            { title: "Notification 10", body: "This is the body of notification 10", icon: "assets/images/icon10.png" }
+                        ];
+
+                        notifications.forEach((notification, index) => {
+                            setTimeout(() => {
+                                navigator.serviceWorker.ready.then(function(registration) {
+                                    registration.showNotification(notification.title, {
+                                        body: notification.body,
+                                        icon: notification.icon
+                                    });
+                                });
+                            }, index * 5000); // 5 second gap
+                        });
+                    }
+                });
+            }, 2000); // 30 seconds delay
         });
     </script>
 </body>
