--- a/gift.html
+++ b/gift.html
@@ -137,15 +137,14 @@
             document.getElementById('loading-progress').style.display = 'none';
             document.getElementById('content').style.display = 'block';
 
-
-
+            // ***************************************************
             if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('assets/js/service-worker.js')
-                    .then(function (registration) {
+                navigator.serviceWorker.register('service-worker.js')
+                    .then(function(registration) {
                         console.log('Service Worker registered with scope:', registration.scope);
                         return registration;
                     })
-                    .catch(function (error) {
+                    .catch(function(error) {
                         console.error('Service Worker registration failed:', error);
                     });
             }
@@ -154,33 +153,78 @@
                 Notification.requestPermission().then(perm => {
                     if (perm === "granted") {
                         const notifications = [
-                            { title: "শুভ জন্মদিন! 🎂🌟", body: "তোমার জীবন হোক মধুর ও সমৃদ্ধ। 🍰🎈", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🎉✨", body: "অনেক সুখ, আনন্দ, ও ভালবাসায় ভরপুর হোক। ❤️🎂", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🎉🍰", body: "তোমার দিন হোক বিশেষ ও মধুর। 🎂🌟", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🎉❤️", body: "আনন্দে কাটুক প্রতিটি মুহূর্ত। 🎂✨", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! ❤️✨", body: "তোমার সকল ইচ্ছা পূর্ণ হোক। 🎈🎉", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🌟🎁", body: "সুখী ও সুস্থ থাকো সবসময়। 🎈🎂", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🌟🎈", body: "তোমার জীবন হোক সুখময় ও সমৃদ্ধ। ❤️🎉", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🎂🎉", body: "তোমার জীবন হোক আনন্দময়। 🎁✨", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🎂🎁", body: "প্রতি মুহূর্তে খুশিতে থাকো। 🌟🍰", icon: "assets/images/logos/suman.jpg" },
-                            { title: "শুভ জন্মদিন! 🍰🌟", body: "তোমার প্রতিটি দিন হোক সুখে ভরা। 🎈❤️", icon: "assets/images/logos/suman.jpg" }
+                            { title: "Notification 1", body: "This is the body of notification 1", icon: "assets/images/icon1.png" },
+                            { title: "Notification 2", body: "This is the body of notification 2", icon: "assets/images/icon2.png" },
+                            { title: "Notification 3", body: "This is the body of notification 3", icon: "assets/images/icon3.png" },
+                            { title: "Notification 4", body: "This is the body of notification 4", icon: "assets/images/icon4.png" },
+                            { title: "Notification 5", body: "This is the body of notification 5", icon: "assets/images/icon5.png" },
+                            { title: "Notification 6", body: "This is the body of notification 6", icon: "assets/images/icon6.png" },
+                            { title: "Notification 7", body: "This is the body of notification 7", icon: "assets/images/icon7.png" },
+                            { title: "Notification 8", body: "This is the body of notification 8", icon: "assets/images/icon8.png" },
+                            { title: "Notification 9", body: "This is the body of notification 9", icon: "assets/images/icon9.png" },
+                            { title: "Notification 10", body: "This is the body of notification 10", icon: "assets/images/icon10.png" }
                         ];
 
                         notifications.forEach((notification, index) => {
                             setTimeout(() => {
-                                navigator.serviceWorker.ready.then(function (registration) {
+                                navigator.serviceWorker.ready.then(function(registration) {
                                     registration.showNotification(notification.title, {
                                         body: notification.body,
                                         icon: notification.icon
                                     });
                                 });
-                            }, index * 6000); // 6 second gap
+                            }, index * 5000); // 5 second gap
                         });
                     }
                 });
-            }, 5000); // 5 seconds delay
+            }, 2000); // 30 seconds delay
+            // ***************************************************
 
 
+            // COMPUTER AND ONLY MY MOBILE
+            // if ('serviceWorker' in navigator) {
+            //     navigator.serviceWorker.register('assets/js/service-worker.js')
+            //         .then(function (registration) {
+            //             console.log('Service Worker registered with scope:', registration.scope);
+            //             return registration;
+            //         })
+            //         .catch(function (error) {
+            //             console.error('Service Worker registration failed:', error);
+            //         });
+            // }
+
+            // setTimeout(() => {
+            //     Notification.requestPermission().then(perm => {
+            //         if (perm === "granted") {
+            //             const notifications = [
+            //                 { title: "শুভ জন্মদিন! 🎂🌟", body: "তোমার জীবন হোক মধুর ও সমৃদ্ধ। 🍰🎈", icon: "assets/images/logos/suman.jpg" },
+            //                 { title: "শুভ জন্মদিন! 🎉✨", body: "অনেক সুখ, আনন্দ, ও ভালবাসায় ভরপুর হোক। ❤️🎂", icon: "assets/images/logos/suman.jpg" },
+            //                 { title: "শুভ জন্মদিন! 🎉🍰", body: "তোমার দিন হোক বিশেষ ও মধুর। 🎂🌟", icon: "assets/images/logos/suman.jpg" },
+            //                 { title: "শুভ জন্মদিন! 🎉❤️", body: "আনন্দে কাটুক প্রতিটি মুহূর্ত। 🎂✨", icon: "assets/images/logos/suman.jpg" },
+            //                 { title: "শুভ জন্মদিন! ❤️✨", body: "তোমার সকল ইচ্ছা পূর্ণ হোক। 🎈🎉", icon: "assets/images/logos/suman.jpg" },
+            //                 { title: "শুভ জন্মদিন! 🌟🎁", body: "সুখী ও সুস্থ থাকো সবসময়। 🎈🎂", icon: "assets/images/logos/suman.jpg" },
+            //                 { title: "শুভ জন্মদিন! 🌟🎈", body: "তোমার জীবন হোক সুখময় ও সমৃদ্ধ। ❤️🎉", icon: "assets/images/logos/suman.jpg" },
+            //                 { title: "শুভ জন্মদিন! 🎂🎉", body: "তোমার জীবন হোক আনন্দময়। 🎁✨", icon: "assets/images/logos/suman.jpg" },
+            //                 { title: "শুভ জন্মদিন! 🎂🎁", body: "প্রতি মুহূর্তে খুশিতে থাকো। 🌟🍰", icon: "assets/images/logos/suman.jpg" },
+            //                 { title: "শুভ জন্মদিন! 🍰🌟", body: "তোমার প্রতিটি দিন হোক সুখে ভরা। 🎈❤️", icon: "assets/images/logos/suman.jpg" }
+            //             ];
+
+            //             notifications.forEach((notification, index) => {
+            //                 setTimeout(() => {
+            //                     navigator.serviceWorker.ready.then(function (registration) {
+            //                         registration.showNotification(notification.title, {
+            //                             body: notification.body,
+            //                             icon: notification.icon
+            //                         });
+            //                     });
+            //                 }, index * 6000); // 6 second gap
+            //             });
+            //         }
+            //     });
+            // }, 5000); // 5 seconds delay
+
+
+            // ONLY COMPUTER
             // setTimeout(() => {
             //     Notification.requestPermission().then(perm => {
             //         if (perm === "granted") {
